facet-styx/src/snapshots/facet_styx__error__tests__missing_field_diagnostic.snap
---
source: crates/facet-styx/src/error.rs
expression: stripped
---
Error: missing required field 'age'
   ╭─[ test.styx:1:6 ]
   │
 1 │ name Alice
   │      ──┬──  
   │        ╰──── in Person
   │ 
   │ Help: age <value>
───╯
